[package]
name = "PA-AUTO-DISP"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = "0.11.26"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
regex = "1.5"



# Command line argument parsing.
clap = { version = "4.4.13", features = ["derive"] }

# Pretty logging.
femme = { version = "2.2.1" }
log = { version = "0.4.20" }

# Colorization and ANSI escape sequence codes.
r3bl_tui = { version = "0.5.1" }
r3bl_ansi_color = { version = "0.6.9" }

ssh2 = "0.9.4"

get_if_addrs = "0.5"
